# colaberry-project

./: .gitignore  Dockerfile  README.md  pyproject.toml
.claude/: settings.local.json
data/: skills.txt
directives/: skill_gap_system_spec.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: index.css
frontend/src/pages/: Analyze.tsx  Home.tsx  Results.tsx
frontend/src/router/: AppRouter.tsx
src/: config.py  skill_loader.py
src/api/: app.py
src/skillgap_analyzer/: __main__.py  analyzer.py  cli.py  schema.py  service.py
src/skillgap_analyzer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py  test_analyzer.py  test_api.py  test_cli.py  test_curriculum.py  test_service.py  test_skill_loader.py
