[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "skillgap-analyzer"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["pypdf>=4.0"]

[project.optional-dependencies]
api = ["fastapi>=0.100", "uvicorn>=0.20"]
dev = ["httpx>=0.24"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
